# physics-engine

./: .gitignore  CMakeLists.txt  imgui.ini
dependencies/glad/: glad.h
src/: config.h  glad.c  main.cpp  physics_engine.cpp  physics_engine.h  renderer.cpp  renderer.h  shapes.cpp  shapes.h  ui_manager.cpp  ui_manager.h
src/shaders/: fragment.glsl  vertex.glsl
